# Verity

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEV.md  Dockerfile  Makefile  README.md  USAGE.md  config.yaml  pyproject.toml  render.yaml  requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ClarificationPrompt.tsx  Controls.tsx  Header.tsx  LogPanel.tsx  ReportView.tsx  Results.tsx  RunForm.tsx  RunView.tsx  StatusBadge.tsx  SummaryTiles.tsx
frontend/src/hooks/: useElapsed.ts  useRunStream.ts  useTheme.ts
frontend/src/lib/: api.ts  classify.ts  format.ts  status.ts  types.ts  url.ts
src/: __init__.py  __main__.py  config.py  main.py  prompts.py
src/graph/: __init__.py  builder.py
src/graph/nodes/: approve.py  compile.py  dequeue.py  execute.py  plan.py  summarize.py
src/llm/: __init__.py  chat.py  factory.py  gemini.py  ollama_wrapper.py  retry.py
src/models/: __init__.py  executor_result.py  report.py  state.py  test_plan.py
src/utils/: __init__.py  fallback.py  security.py  url.py
static/: index.html
static/assets/: index-BhCEDyCl.css  index-C5I1EUM7.js  index-CCxQ7lDn.js  index-DgXldaNu.css  index-P2qsYH0f.js
tests/: test_config.py  test_executor.py  test_fallback.py  test_main.py  test_plan.py  test_report.py  test_security.py  test_server.py
