[project]
name = "web-test-agent"
version = "0.1.0"
description = "Autonomous website testing agent using browser-use and LangGraph"
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "browser-use>=0.13.4",
    "langgraph>=1.0.10",
    "langgraph-checkpoint>=2.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "langchain-ollama>=1.0.1",
    "google-genai>=1.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
web-test-agent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[install]
link-mode = "copy"
